--- a/src/address/component/addressItem.html
+++ b/src/address/component/addressItem.html
@@ -1,56 +1,23 @@
-<div>
-  <div class="address-content" ng-show="!addressItem.editing">
-    <p class="street">{{ addressItem.address.street }}</p>
-    <p class="sub-street">{{ addressItem.address.subStreet }}</p>
-    <p class="area">{{ addressItem.address.city }}-{{ addressItem.address.country }}</p>
-    <md-menu>
-      <md-button ng-click="addressItem.toggleMenu($mdOpenMenu, $event)">toggle</md-button>
-      <md-menu-content>
-        <md-menu-item>
-          <md-button ng-click="addressItem.toggleEdit()">edit</md-button>
-        </md-menu-item>
-        <md-divider></md-divider>
-        <md-menu-item>
-          <md-button>delete</md-button>
-        </md-menu-item>
-      </md-menu-content>
-    </md-menu>
-  </div>
-  <div class="address-form" ng-show="!addressItem.editing">
-    <md-input-container>
-      <input type="text" />
-    </md-input-container>
-    <md-input-container>
-      <label for="">type</label>
-      <md-select ng-model="addressItem.address.type">
-        <md-option ng-repeat="type in addressSection.types" value="{{type.id}}">
-          {{type.title}}
-        </md-option>
-      </md-select>
-    </md-input-container>
-    <md-input-container>
-      <label for="">Street</label>
-      <input type="text" ng-model="addressItem.address.street">
-    </md-input-container>
-    <md-input-container>
-      <label for="">Sub Street</label>
-      <input type="text" ng-model="addressItem.address.subStreet">
-    </md-input-container>
-    <md-input-container>
-      <label for="">City</label>
-      <input type="text" ng-model="addressItem.address.city" />
-    </md-input-container>
-    <md-input-container>
-      <label for="">State</label>
-      <input type="text" ng-model="addressItem.address.state" />
-    </md-input-container>
-    <md-input-container>
-      <label for="">Country</label>
-      <md-select ng-model="addressItem.address.country">
-        <md-option ng-repeat="country in addressSection.countries" value="{{country.id}}">
-          {{type.title}}
-        </md-option>
-      </md-select>
-    </md-input-container>
+<div class="address-content" ng-if="!addressItem.address.editing">
+  <p>
+    <span class="street">{{ addressItem.address.street }}</span>
+    <span class="sub-street">{{ addressItem.address.subStreet }}</span>
+  </p>
+  <p class="type">{{ addressItem.address.type | typeTitle }}</p>
+  <p class="area">{{ addressItem.address.city }}&nbsp;{{ addressItem.address.state }}&nbsp;{{ addressItem.address.country | countryTitle }}</p>
+  <div class="address-btns" layout="row" layout-align="start start">
+    <md-button class="" ng-click="addressItem.copy()">
+      <i class="fa fa-copy"></i>
+    </md-button>
+    <md-button class="" ng-click="addressItem.toggleEdit()">
+      <i class="fa fa-pencil"></i>
+    </md-button>
+    <md-button class="" ng-click="addressItem.delete()">
+      <i class="fa fa-trash"></i>
+    </md-button>
   </div>
 </div>
+<address-item-edit
+  ng-if="addressItem.address.editing"
+  address="addressItem.address">
+</address-item-edit>
