add some animations, add address search and change some styles

--- a/src/address/component/addressAutocomplete.html
+++ b/src/address/component/addressAutocomplete.html
@@ -1,3 +1,6 @@
 <md-input-container class="md-block">
-  <input type="text" />
+  <input
+    type="text"
+    aria-label="address autocomplete"
+    ng-model="addressAutocomplete.address.formatAddress" />
 </md-input-container>
