--- a/src/address/component/addressItemEdit.html
+++ b/src/address/component/addressItemEdit.html
@@ -1,35 +1,35 @@
 <div class="address-form">
-  <address-autocomplete address="addressItemEdit.address"></address-autocomplete>
-  <md-select class="md-block" ng-model="addressItemEdit.address.type" placeholder="type">
-    <md-option ng-repeat="type in addressItemEdit.types" value="{{type.id}}">
+  <md-select class="md-block type-control" ng-model="addressItemEdit.address.type" placeholder="Type">
+    <md-option ng-repeat="type in addressItemEdit.addressTypes" value="{{type.id}}">
       {{type.title}}
     </md-option>
   </md-select>
+  <address-autocomplete address="addressItemEdit.address"></address-autocomplete>
   <md-input-container class="md-block">
     <label for="">Street</label>
     <input type="text" ng-model="addressItemEdit.address.street">
   </md-input-container>
   <md-input-container class="md-block">
     <label for="">Sub Street</label>
-    <input type="text" ng-model="addressItemEdit.address.subStreet">
-  </md-input-container>
-  <div layout="row">
-    <md-input-container flex="50">
+    <input type="text" ng-model="addressItemEdit.address.subStreet"> </md-input-container> <div layout="row">
+    <md-input-container class="city-control">
       <label for="">City</label>
       <input type="text" ng-model="addressItemEdit.address.city" />
     </md-input-container>
-    <md-input-container flex="50">
+    <md-input-container class="state-control">
       <label for="">State</label>
       <input type="text" ng-model="addressItemEdit.address.state" />
     </md-input-container>
+    <md-input-container class="postalcode-control">
+      <label for="">Postal Code</label>
+      <input type="text" ng-model="addressItemEdit.address.postalCode" />
+    </md-input-container>
   </div>
-  <div>
-    <md-select ng-model="addressItemEdit.address.country" placeholder="Country">
-      <md-option ng-repeat="country in addressItemEdit.countries" value="{{country.id}}">
-        {{country.title}}
-      </md-option>
-    </md-select>
-  </div>
+  <md-select ng-model="addressItemEdit.address.country" placeholder="Country">
+    <md-option ng-repeat="country in addressItemEdit.countryList" value="{{country.code}}">
+      {{country.name}}
+    </md-option>
+  </md-select>
   <div layout="row" layout-align="end center">
     <md-button ng-click="addressItemEdit.cancel()">cancel</md-button>
     <md-button class="md-primary" ng-click="addressItemEdit.submit()">submit</md-button>
