--- a/src/address/component/addressList.html
+++ b/src/address/component/addressList.html
@@ -1,6 +1,9 @@
-<md-toolbar class="md-tall md-primary address-toolbar md-whiteframe-2dp">
+<md-toolbar
+  class="md-tall md-primary address-toolbar md-whiteframe-2dp"
+  ng-class="{'short' : addressList.newAddress.editing}"
+  >
 	<h2 class="md-toolbar-tools">
-		<span>Address List</span>
+		<span>Addresses</span>
 	</h2>
 	<md-input-container
 		md-no-float
@@ -8,19 +11,19 @@
 		ng-show="addressList.addressList.length > 0">
 		<input
 			type="text"
-			ng-modle="addressList.searchKeyword"
+			ng-model="addressList.searchKeyword"
 			placeholder="search your address" />
 	</md-input-container>
 	<md-button
 		class="md-fab create-address-btn"
-		ng-if="!addressList.newAddress.editing"
-		ng-click="addressList.addNewAddress()"
+    aria-label="create address" ng-class="{'cancel' : addressList.newAddress.editing}"
+		ng-click="addressList.toggleCreate()"
 		>
 		<i class="fa fa-plus"></i>
 	</md-button>
 </md-toolbar>
 <md-content
-  class="md-padding"
+  class="md-padding create-address-wrap"
   ng-if="addressList.newAddress.editing">
   <address-item-edit
     address="addressList.newAddress">
@@ -29,7 +32,7 @@
 <md-list>
 	<address-item
 		address="address"
-		ng-repeat="address in addressList.addressList">
+		ng-repeat="address in addressList.addressList | search: addressList.searchKeyword">
 	</address-item>
 </md-list>
 
